# WebCpp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
examples/: BasicAuthClient.cpp  BasicAuthServer.cpp  CMakeLists.txt  Client.cpp  FastCgi.cpp  FileServer.cpp  Form.cpp  HttpClient.cpp  HttpServer.cpp  LoadTest.cpp  PreRoute.cpp  Route.cpp  Server.cpp  Simple.cpp  SimpleHttpServer.cpp  WebSocket.cpp  WebSocket2.cpp  WebSocketClient.cpp  WebSocketPingPong.cpp  WebSocketServer.cpp  example_common.h
examples/public/: auth.html  blob.py  fcgi.html  form.html  index.html  route.html  server.html  style.css  ws.html  ws2.html  ws3.html
examples/templates/: fileserverpage.txt  fileservertable.txt  fileservertablerow.txt
include/: CommunicationSslClient.h  CommunicationSslServer.h  CommunicationTcpClient.h  CommunicationTcpServer.h  Data.h  FcgiClient.h  FileSystem.h  GlobalTimer.h  HttpClient.h  HttpConfig.h  HttpHeader.h  HttpServer.h  ICommunication.h  ICommunicationClient.h  IError.h  IHttp.h  IRunnable.h  KeepAliveTimer.h  Lock.h  LogWriter.h  PeriodicalTask.h  Print.h  Request.h  RequestBody.h  RequestWebSocket.h  Response.h  ResponseWebSocket.h  Route.h  RouteHttp.h  RouteWebSocket.h  Session.h  SessionManager.h  Sha1.h  StringUtil.h  Url.h  WebSocketClient.h  WebSocketServer.h  common.h  common_ws.h
include/auth/: AuthBasic.h  AuthFactory.h  AuthProvider.h  IAuth.h
include/comm/: CommunicationSslServer.h  CommunicationTcpServer.h  ICommunication.h  ICommunicationClient.h  ICommunicationServer.h
include/common/: IError.h  IErrorable.h  IRunnable.h  common.h  common_webcpp.h  common_ws.h  defines_webcpp.h
include/conn/: ComminucationUnixClient.h  CommunicationSslClient.h  CommunicationSslServer.h  CommunicationTcpClient.h  CommunicationTcpServer.h  ICommunication.h  ICommunicationClient.h  ICommunicationServer.h
include/utils/: Data.h  DebugPrint.h  FileSystem.h  KeepAliveTimer.h  Lock.h  LogWriter.h  MD5.h  PeriodicalTask.h  Print.h  Sha1.h  Sha256.h  StringUtil.h  ThreadWorker.h
include/wrappers/posix/: File.h  Lock.h  Mutex.h  Platform.h  Signal.h  Socket.h  SocketPool.h  Thread.h  ThreadWorker.h
src/: CommunicationSslServer.cpp  CommunicationTcpClient.cpp  CommunicationTcpServer.cpp  Data.cpp  FcgiClient.cpp  FileSystem.cpp  GlobalTimer.cpp  HttpClient.cpp  HttpConfig.cpp  HttpHeader.cpp  HttpServer.cpp  IHttp.cpp  Lock.cpp  LogWriter.cpp  PeriodicalTask.cpp  Request.cpp  RequestBody.cpp  RequestWebSocket.cpp  Response.cpp  ResponseWebSocket.cpp  Route.cpp  RouteHttp.cpp  RouteWebSocket.cpp  Session.cpp  SessionManager.cpp  Sha1.cpp  StringUtil.cpp  Url.cpp  WebSocketClient.cpp  WebSocketServer.cpp  common.cpp
src/auth/: AuthBasic.cpp  AuthFactory.cpp  AuthProvider.cpp  IAuth.cpp
src/comm/: CommunicationSslClient.cpp  CommunicationSslServer.cpp  CommunicationTcpServer.cpp
src/conn/: ComminucationUnixClient.cpp  CommunicationSslClient.cpp  CommunicationSslServer.cpp  CommunicationTcpClient.cpp  CommunicationTcpServer.cpp  ICommunication.cpp  ICommunicationClient.cpp  ICommunicationServer.cpp
src/utils/: Data.cpp  DebugPrint.cpp  FileSystem.cpp  KeepAliveTimer.cpp  LogWriter.cpp  MD5.cpp  Print.cpp  Sha1.cpp  Sha256.cpp  StringUtil.cpp  ThreadWorker.cpp
src/wrappers/posix/: File.cpp  Lock.cpp  Mutex.cpp  Platform.cpp  Signal.cpp  Socket.cpp  SocketPool.cpp  Thread.cpp  ThreadWorker.cpp
test/: FastCgi.cpp  FileServer.cpp  Form.cpp  Route.cpp  WebSocket.cpp  main.cpp
test/public/: form.html  index.html  index1.php  index2.php  index3.php  style.css  ws.html
